# qt-multiplier

./: .clang-format  .gitmodules  CMakeLists.txt  CodeBrowserView.cpp  CodeBrowserView.h  CodeSearchResults.cpp  CodeSearchResults.h  CodeTheme.cpp  CodeTheme.h  CodeView.cpp  CodeView.h  Configuration.cpp  Configuration.h  DownloadCodeThread.cpp  DownloadCodeThread.h  Event.cpp  Event.h  FileView.cpp  HistoryBrowserView.cpp  LICENSE  Main.cpp  Multiplier.cpp  Multiplier.h  OldCodeView.cpp  OldCodeView.h  OmniBoxView.cpp  OmniBoxView.h  OpenFile.cpp  PythonCompletionModel.cpp  PythonCompletionModel.h  PythonOutputAdapter.cpp  PythonOutputAdapter.h  PythonPromptView.cpp  PythonPromptView.h  README.md  ReferenceBrowserView.cpp  Util.cpp  flake.nix  vcpkg-configuration.json  vcpkg.json
application/: CMakeLists.txt  Info.plist
application/src/: ConfigEditor.cpp  ConfigEditor.h  ConfigEditorDelegate.h  Main.cpp  MainWindow.cpp  MainWindow.h  MetaTypes.cpp  MetaTypes.h  MultiplierStyle.cpp  Style.h  WindowManager.cpp  WindowManager.h  main.cpp
application/src/Interfaces/: IReferenceExplorerPlugin.cpp
components/: CMakeLists.txt
components/ActionRegistry/: CMakeLists.txt
components/ActionRegistry/src/: ActionRegistry.cpp  ActionRegistry.h  IAction.cpp  IActionRegistry.cpp
components/Assert/: CMakeLists.txt
components/CodeTheme/: CMakeLists.txt
components/CodeTheme/src/: CodeTheme.cpp  CodeTheme.h
components/CodeView/: CMakeLists.txt
components/CodeView/Resources/: Resources.qrc
components/CodeView/src/: Code.h  CodeModel.cpp  CodeModel.h  CodeView.cpp  CodeView.h  CodeView2.cpp  CodeView2.h  CodeViewTheme.cpp  CodeWidget.cpp  DefaultCodeViewThemes.cpp  DefaultCodeViewThemes.h  GoToLineWidget.cpp  GoToLineWidget.h  ICodeModel.cpp  ICodeView.cpp  ICodeView2.cpp  InternalSearchWidget.cpp  InternalSearchWidget.h  SearchWidget.cpp  SearchWidget.h
components/CodeViewTheme/: CMakeLists.txt
components/CodeViewTheme/src/: CodeViewTheme.cpp  DefaultCodeViewThemes.cpp  DefaultCodeViewThemes.h
components/Context/: CMakeLists.txt
components/Context/src/: Context.cpp
components/Database/: CMakeLists.txt
components/Database/src/: Database.cpp  Database.h  IDatabase.cpp  IRPC.cpp  RPC.cpp  RPC.h
components/EntityExplorer/: CMakeLists.txt
components/EntityExplorer/src/: CategoryComboBox.cpp  CategoryComboBox.h  CodeItem.cpp  CodeItem.h  EntityExplorer.cpp  EntityExplorer.h  EntityExplorerItemDelegate.cpp  EntityExplorerItemDelegate.h  EntityExplorerModel.cpp  EntityExplorerModel.h  IEntityExplorer.cpp
components/FileTreeModel/: CMakeLists.txt
components/FileTreeModel/src/: FileTreeModel.cpp  FileTreeModel.h  IFileTreeModel.cpp
components/FileTreeModel/tests/: CMakeLists.txt
components/FontDatabase/: CMakeLists.txt
components/FontDatabase/Resources/: fontdatabase.qrc
components/FontDatabase/src/: FontDatabase.cpp
components/Generators/: CMakeLists.txt
components/GlobalHighlighter/: CMakeLists.txt
components/HistoryWidget/: CMakeLists.txt
components/IndexView/: CMakeLists.txt
components/InformationExplorer/: CMakeLists.txt
components/LineEdit/: CMakeLists.txt
components/MacroExplorer/: CMakeLists.txt
components/MainWindowPlugin/: CMakeLists.txt
components/ProjectExplorer/: CMakeLists.txt
components/PythonConsoleWidget/: CMakeLists.txt
components/ReferenceExplorer/: CMakeLists.txt
components/Registry/: CMakeLists.txt
components/SearchWidget/: CMakeLists.txt
components/ThemeManager/: CMakeLists.txt
components/TokenLabel/: CMakeLists.txt
components/TreeExplorer/: CMakeLists.txt
components/Util/: CMakeLists.txt
explorers/: CMakeLists.txt
explorers/GlobalHighlighter/: CMakeLists.txt
explorers/InformationExplorer/: CMakeLists.txt
interfaces/: CMakeLists.txt
interfaces/src/: IAction.cpp  IGeneratedItem.cpp  IListGenerator.cpp  IModel.cpp  ITheme.cpp  IThemeProxy.cpp  ITreeGenerator.cpp  ITreeItem.cpp  IWindowManager.cpp  IWindowWidget.cpp
libraries/: CMakeLists.txt
libraries/doctest/: CMakeLists.txt
libraries/multiplier/: CMakeLists.txt
libraries/phantomstyle/: CMakeLists.txt
libraries/py-multiplier/: CMakeLists.txt
libraries/python/: CMakeLists.txt
libraries/qt/: CMakeLists.txt
libraries/qt-advanced-docking-system/: CMakeLists.txt
libraries/sqlite-multiplier/: CMakeLists.txt
libraries/xxhash/: CMakeLists.txt
managers/: CMakeLists.txt  CMakeListst.txt
managers/ActionManager/: CMakeLists.txt
managers/ConfigManager/: CMakeLists.txt
managers/ContextManager/: CMakeLists.txt
managers/MediaManager/: CMakeLists.txt
managers/ThemeManager/: CMakeLists.txt
media/: CMakeLists.txt
media/resources/: Resources.qrc
media/src/: Media.cpp
multiplier/: CMakeLists.txt
multiplier/DataGenerators/: CMakeLists.txt
multiplier/Resources/: resources.qrc
multiplier/data_generators/: CMakeLists.txt
multiplier/generators/: CMakeLists.txt
multiplier/src/: CallHierarchyGenerator.cpp  CallHierarchyGenerator.h  MainWindow.cpp  MainWindow.h  MetaTypes.cpp  QuickReferenceExplorer.cpp  QuickReferenceExplorer.h  Style.cpp  Theme.cpp  Types.h  main.cpp  meta_types.cpp  meta_types.h  themes.cpp  themes.h
multiplier/widgets/: CMakeLists.txt
package/: CMakeLists.txt  README.md
package/generators/: DEB.cmake  DragNDrop.cmake  common.cmake
plugins/: CMakeLists.txt
plugins/MainWindowPlugins/: CMakeLists.txt
plugins/src/: BuiltinEntityInformationPlugin.cpp  CallHierarchyPlugin.cpp  ClassHierarchyPlugin.cpp  StructExplorer.cpp
widgets/: CMakeLists.txt
widgets/CodeWidget/: CMakeLists.txt
widgets/ConfigEditor/: CMakeLists.txt
widgets/DockWidget/: CMakeLists.txt
widgets/FilterSettingsWidget/: CMakeLists.txt
widgets/GeneratorWidget/: CMakeLists.txt
widgets/HistoryWidget/: CMakeLists.txt
widgets/LineEditWidget/: CMakeLists.txt
widgets/PopupWidget/: CMakeLists.txt
widgets/PythonConsoleWidget/: CMakeLists.txt
widgets/SearchWidget/: CMakeLists.txt
widgets/SimpleTextInputDialog/: CMakeLists.txt
widgets/TabWidget/: CMakeLists.txt
widgets/TreeWidget/: CMakeLists.txt
(+626 files in other folders)
