#
# Copyright (c) 2022-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

add_subdirectory("Assert")
add_subdirectory("CodeView")
add_subdirectory("CodeViewTheme")
add_subdirectory("Database")
add_subdirectory("EntityExplorer")
add_subdirectory("Util")
add_subdirectory("FontDatabase")
add_subdirectory("ProjectExplorer")
add_subdirectory("ReferenceExplorer")
add_subdirectory("SearchWidget")
add_subdirectory("HistoryWidget")
add_subdirectory("InformationExplorer")
add_subdirectory("LineEdit")
add_subdirectory("GlobalHighlighter")
add_subdirectory("ThemeManager")
