#
# Copyright (c) 2022-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

add_subdirectory("doctest")
add_subdirectory("multiplier")
add_subdirectory("qt")
add_subdirectory("phantomstyle")
add_subdirectory("vendored")
add_subdirectory("xxhash")
