#
# Copyright (c) 2023-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

add_subdirectory("ActionManager")
add_subdirectory("ThemeManager")
add_subdirectory("MediaManager")

# Depends on the above
add_subdirectory("ConfigManager")
