#
# Copyright (c) 2023-present, Trail of Bits, Inc.
# All rights reserved.
#
# This source code is licensed in accordance with the terms specified in
# the LICENSE file found in the root directory of this source tree.
#

add_subdirectory("HistoryWidget")
add_subdirectory("LineEditWidget")
add_subdirectory("PopupWidget")
add_subdirectory("PythonConsoleWidget")
add_subdirectory("SearchWidget")
add_subdirectory("TabWidget")
add_subdirectory("TreeWidget")
